Photos now uses thumbnails

--- a/photos.html
+++ b/photos.html
@@ -81,10 +81,10 @@ Click on a photo to download high quality version (for publicity purposes).
 
 <table class="phototable">
 <tr>
-<td class="phototablecell"><a href="photos/andybgoode0002-highres.jpg" download><img src="photos/andybgoode0002.jpg" class="photo" alt="Click to download high quality version" ></a></td>
-<td class="phototablecell"><a href="photos/andybgoode0001-highres.jpg"download><img src="photos/andybgoode0001.jpg" class="photo" alt="Click to download high quality version" ></a></td>
-<td class="phototablecell"><a href="photos/andybgoode0004-highres.jpg" download><img src="photos/andybgoode0004.jpg" class="photo" alt="Click to download high quality version" ></a></td>
-<td class="phototablecell"><a href="photos/andybgoode0014-highres.jpg" download><img src="photos/andybgoode0014.jpg" class="photo" alt="Click to download high quality version" ></a></td>
+<td class="phototablecell"><a href="photos/andybgoode0002-highres.jpg" download><img src="photos/andybgoode0002-thumb.jpg" class="photo" alt="Click to download high quality version" ></a></td>
+<td class="phototablecell"><a href="photos/andybgoode0001-highres.jpg"download><img src="photos/andybgoode0001-thumb.jpg" class="photo" alt="Click to download high quality version" ></a></td>
+<td class="phototablecell"><a href="photos/andybgoode0004-highres.jpg" download><img src="photos/andybgoode0004-thumb.jpg" class="photo" alt="Click to download high quality version" ></a></td>
+<td class="phototablecell"><a href="photos/andybgoode0014-highres.jpg" download><img src="photos/andybgoode0014-thumb.jpg" class="photo" alt="Click to download high quality version" ></a></td>
 </tr>
 <tr>
 <td class="phototext">Andy B Goode Flyer (HIGH RESOLUTION)</td>
@@ -108,10 +108,10 @@ If you have have any great photos from my gigs, please do send me a link to them
 <td class="albumheading" colspan="4"><h3>Birthday Parties</h3></td>
 </tr>
 <tr>
-<td><img src="photos/andybgoode0005.jpg" class="photo" alt="The Birthday Girl Dressed as a Flapper"></td>
-<td><img src="photos/andybgoode0015.jpg" class="photo" alt="Elaine's Birthday Party"></td>
-<td><img src="photos/andybgoode0006.jpg" class="photo" alt="Anne's Birthday Party"></td>
-<td><img src="photos/andybgoode0016.jpg" class="photo" alt="Elaine's Birthday Party"></td>
+<td><img src="photos/andybgoode0005-thumb.jpg" class="photo" alt="The Birthday Girl Dressed as a Flapper"></td>
+<td><img src="photos/andybgoode0015-thumb.jpg" class="photo" alt="Elaine's Birthday Party"></td>
+<td><img src="photos/andybgoode0006-thumb.jpg" class="photo" alt="Anne's Birthday Party"></td>
+<td><img src="photos/andybgoode0016-thumb.jpg" class="photo" alt="Elaine's Birthday Party"></td>
 </tr>
 <tr>
 <td class="phototext">The Birthday Girl Dressed as a Flapper</td>
@@ -124,10 +124,10 @@ If you have have any great photos from my gigs, please do send me a link to them
 <td class="albumheading" colspan="4"><h3>Vintage Fetes / Fayres</h3></td>
 </tr>
 <tr>
-<td><img src="photos/andybgoode0011.jpg" class="photo" alt="Waving the flag at St Pauls Dosthill Church Vintage Summer Fete and I wasn't the only one who dressed vintage style."></td>
-<td><img src="photos/andybgoode0012.jpg" class="photo" alt="Singing by a picturesque church"></td>
-<td><img src="photos/andybgoode0008.jpg" class="photo" alt="Fly me to the moon"></td>
-<td><img src="photos/andybgoode0010.jpg" class="photo" alt="Singing with Passion"></td>
+<td><img src="photos/andybgoode0011-thumb.jpg" class="photo" alt="Waving the flag at St Pauls Dosthill Church Vintage Summer Fete and I wasn't the only one who dressed vintage style."></td>
+<td><img src="photos/andybgoode0012-thumb.jpg" class="photo" alt="Singing by a picturesque church"></td>
+<td><img src="photos/andybgoode0008-thumb.jpg" class="photo" alt="Fly me to the moon"></td>
+<td><img src="photos/andybgoode0010-thumb.jpg" class="photo" alt="Singing with Passion"></td>
 </tr>
 <tr>
 <td class="phototext">Waving the flag at St Pauls Dosthill Church Vintage Summer Fete and I wasn't the only one who dressed vintage style.</td>
@@ -136,10 +136,10 @@ If you have have any great photos from my gigs, please do send me a link to them
 <td class="phototext">Singing with Passion</td>
 </tr>
 <tr>
-<td><img src="photos/andybgoode0007.jpg" class="photo" alt="A Traction engine at Norton Juxta Twycross Summer Fete"></td>
-<td><img src="photos/andybgoode0018.jpg" class="photo" alt="A beautiful summers day, with heavy rain showers...of course this is England"></td>
-<td><img src="photos/andybgoode0017.jpg" class="photo" alt="A lovely venue to sing, right by the swimming pool"></td>
-<td><img src="images/andybgoode.jpg" class="photo" alt="I sang 'Teenager in Love' live on the local radio station TRC FM"></td>
+<td><img src="photos/andybgoode0007-thumb.jpg" class="photo" alt="A Traction engine at Norton Juxta Twycross Summer Fete"></td>
+<td><img src="photos/andybgoode0018-thumb.jpg" class="photo" alt="A beautiful summers day, with heavy rain showers...of course this is England"></td>
+<td><img src="photos/andybgoode0017-thumb.jpg" class="photo" alt="A lovely venue to sing, right by the swimming pool"></td>
+<td><img src="images/andybgoode-thumb.jpg" class="photo" alt="I sang 'Teenager in Love' live on the local radio station TRC FM"></td>
 </tr>
 <tr>
 <td class="phototext">A Traction engine at Norton Juxta Twycross Summer Fete</td>
@@ -152,10 +152,10 @@ If you have have any great photos from my gigs, please do send me a link to them
 <td class="albumheading" colspan="4"><h3>The Jays Vocal Vintage Tribute Group</h3>I am also proud to be part of a 1940s Vocal Vintage Tribute Group with some lovely ladies.We sing Andrews sisters, Bing Crosby, Frank Sinatra style songs. Do check out our <a href="https://www.facebook.com/TheJaysVintage">facebook</a> page and <a href="http://www.TheJaysVintageVocalGroup.webs.com">website</a>.</td>
 </tr>
 <tr>
-<td><img src="photos/thejays0001.jpg" class="photo" alt="The Jays at Tamworth Castle Grounds"></td>
-<td><img src="photos/thejays0002.jpg" class="photo" alt="The Jays at Tamworth Castle Grounds amongst the flowers"></td>
-<td><img src="photos/thejays0006.jpg" class="photo" alt="The Jays at Tamworth Castle Grounds 2016"></td>
-<td><img src="photos/thejays0007.jpg" class="photo" alt="The Jays at Ashby Christmas Light Switch on"></td>
+<td><img src="photos/thejays0001-thumb.jpg" class="photo" alt="The Jays at Tamworth Castle Grounds"></td>
+<td><img src="photos/thejays0002-thumb.jpg" class="photo" alt="The Jays at Tamworth Castle Grounds amongst the flowers"></td>
+<td><img src="photos/thejays0006-thumb.jpg" class="photo" alt="The Jays at Tamworth Castle Grounds 2016"></td>
+<td><img src="photos/thejays0007-thumb.jpg" class="photo" alt="The Jays at Ashby Christmas Light Switch on"></td>
 </tr>
 <tr>
 <td class="phototext">The Jays at Tamworth Castle Grounds</td>
@@ -164,10 +164,10 @@ If you have have any great photos from my gigs, please do send me a link to them
 <td class="phototext">The Jays at Ashby Christmas Light Switch on</td>
 </tr>
 <tr>
-<td><img src="photos/thejays0005.jpg" class="photo" alt="I'm just leaning on the lamp post on the corner of the street, till a certain little lady comes by"></td>
-<td><img src="photos/thejays0004.jpg" class="photo" alt="I believe I can fly"></td>
-<td><img src="photos/thejays0003.jpg" class="photo" alt="A Cheeky Jays Shot"></td>
-<td><img src="photos/thejays0008.jpg" class="photo" alt="The Jays Vocal Vintage Tribute Group from Tamworth Staffordshire"></td>
+<td><img src="photos/thejays0005-thumb.jpg" class="photo" alt="I'm just leaning on the lamp post on the corner of the street, till a certain little lady comes by"></td>
+<td><img src="photos/thejays0004-thumb.jpg" class="photo" alt="I believe I can fly"></td>
+<td><img src="photos/thejays0003-thumb.jpg" class="photo" alt="A Cheeky Jays Shot"></td>
+<td><img src="photos/thejays0008-thumb.jpg" class="photo" alt="The Jays Vocal Vintage Tribute Group from Tamworth Staffordshire"></td>
 </tr>
 <tr>
 <td class="phototext">I'm just leaning on the lamp post on the corner of the street, till a certain little lady comes by</td>
