photos - removed info, altered footer

--- a/photos.html
+++ b/photos.html
@@ -58,16 +58,9 @@
 <a href="testimonials.html#testimonials">Testimonials</a>
 <a href="#contact">Contact</a>
 </div>
-<br/>
 
 
 <div id="main">
-
-
-
-<div id="info-area"><div class="textbox-area">
-<h3>Here's a small selection of photos from previous gigs.</h3>
-</div></div>
 
 
 
@@ -190,11 +183,11 @@ If you have have any great photos from my gigs, please do send me a link to them
 <ul>
 <li>Phone: 07979 536591</li>
 <li>email: Andy@AndyBGoode.com</li>
-<li>Facebook: <a href="https://www.facebook.com/AndyBGoode">www.facebook.com/AndyBGoode</a></li>
-<li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">www.instagram.com/andybgoodevocalist</a></li>
-<li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode Channel</a></li>
-<li>Twitter: <a href="http://www.twitter.com/AndyBGoode">www.twitter.com/AndyBGoode</a></li>
-<li>website: v2.0.7</li>
+<li>Facebook: <a href="https://www.facebook.com/AndyBGoode">AndyBGoode</a></li>
+<li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
+<li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
+<li>Twitter: <a href="http://www.twitter.com/AndyBGoode">AndyBGoode</a></li>
+<li>website: v2.0.9</li>
 </ul>
 </div>
 </div>
