--- a/photos.html
+++ b/photos.html
@@ -171,6 +171,8 @@ If you have have any great photos from my gigs, please do send me a link to them
 
 </table>
 
+<a href="showhide.html">XXXX</a>
+
 </div>
 </div>
 
