--- a/showhide.html
+++ b/showhide.html
@@ -433,18 +433,8 @@ function assignAlbumsOntoPages() {
 </div>
 
 
-
-
-
-
-
 <div id="main">
 
-<!--
-<div id="info-area"><div class="textbox-area">
-<h3>Here's a small selection of photos from previous gigs.</h3>
-</div></div>
--->
 
 <div id="photos-highres-area">
 <h2 id="photos" class="banner">Photos</h2>
@@ -482,10 +472,10 @@ function assignAlbumsOntoPages() {
 <ul>
 <li>Phone: 07979 536591</li>
 <li>email: Andy@AndyBGoode.com</li>
-<li>Facebook: <a href="https://www.facebook.com/AndyBGoode">www.facebook.com/AndyBGoode</a></li>
-<li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">www.instagram.com/andybgoodevocalist</a></li>
-<li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode Channel</a></li>
-<li>Twitter: <a href="http://www.twitter.com/AndyBGoode">www.twitter.com/AndyBGoode</a></li>
+<li>Facebook: <a href="https://www.facebook.com/AndyBGoode">AndyBGoode</a></li>
+<li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
+<li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
+<li>Twitter: <a href="http://www.twitter.com/AndyBGoode">AndyBGoode</a></li>
 <li>website: v2.0.9</li>
 </ul>
 </div>
@@ -572,12 +562,17 @@ function initVars() {
 //TODO Thumbnail Photos
 //TODO High Res Photos
 
-//TODO Test on Firefox .... TESTED OK
-//TODO Test on Chrome ..... TESTED OK
-//TODO Test on IE ......... FAILED IE11
+//TODO Test on Firefox .... OVERALL GREAT: Thumbnails = OK, Full Screen = OK
+//TODO Test on IE ......... OVERALL GREAT: Thumbnails = OK, Full Screen = OK
+//TODO Test on Chrome ..... OVERALL OK: Thumbnails =  1) photo captions dont wrap, causing display problems, Full Screen =  photo captions dont wrap, causing display problems
 //TODO Test on Edge ....... 
-//TODO Test on Android .... 
+//TODO Test on Android Browser.... 
+//TODO Test on Android Chrome.... OVERALL OK: Thumbnails =  1) photo captions dont wrap, causing display problems, Full Screen =  photo captions dont wrap, causing display problems
 //TODO Test on Safari ..... 
+
+//TODO display something if no javascript
+
+//TODO if screen size changes resize all cached images
 
 //TODO Display Tag cloud
 
