--- a/showhide.html
+++ b/showhide.html
@@ -566,9 +566,15 @@ function initVars() {
 //TODO Test on IE ......... OVERALL GREAT: Thumbnails = OK, Full Screen = OK
 //TODO Test on Chrome ..... OVERALL OK: Thumbnails =  1) photo captions dont wrap, causing display problems, Full Screen =  photo captions dont wrap, causing display problems
 //TODO Test on Edge ....... 
-//TODO Test on Android Browser.... 
-//TODO Test on Android Chrome.... OVERALL OK: Thumbnails =  1) photo captions dont wrap, causing display problems, Full Screen =  photo captions dont wrap, causing display problems
-//TODO Test on Safari ..... 
+
+//TODO full screen buttons need to be deeper and transparent
+//TODO Test on Android Browser Portrait.... OVERALL FAIL: Thumbnails =  1) photo captions dont wrap, causing display problems, Full Screen =  no photo (seems to not have correct screen size)+photo captions dont wrap, causing display problems
+//TODO Test on Android Browser Landscape.... OVERALL FAIL: Thumbnails =  1) photo captions dont wrap, causing display problems, Full Screen =  no photo (screen size seems ok)+photo captions dont wrap, causing display problems
+//TODO Test on Android Chrome Portrait.... OVERALL OK: Thumbnails =  1) photo captions dont wrap, causing display problems, Full Screen =  photo captions dont wrap, causing display problems
+//TODO Test on Android Chrome Landscape.... OVERALL OK: Thumbnails =  1) photo captions dont wrap, causing display problems, Full Screen =  photo captions dont wrap, causing display problems
+//TODO Test on Safari Portrait..... 
+//TODO Test on Safari Landscape..... 
+
 
 //TODO display something if no javascript
 
