--- a/showhide.html
+++ b/showhide.html
@@ -589,7 +589,7 @@ function initVars() {
 //TODO Test on Chrome ..... OVERALL OK: Thumbnails =  Full Screen =  photo captions dont wrap correctly, causing minor display problems
 //TODO Test on Edge ....... 
 
-//TODO full screen buttons PLAY, CLOSE, DOWNLOAD need to be deeper
+//TODO full screen buttons Next and Previous text shown as unknown symbol box on iphone
 
 //TODO Test on Android Browser Portrait.... OVERALL OK: Thumbnails = OK, Full Screen =  photo captions dont wrap, causing minor display problems
 //TODO Test on Android Browser Landscape.... OVERALL OK: Thumbnails =  OK, Full Screen =  photo captions dont wrap, causing minor display problems
@@ -597,8 +597,9 @@ function initVars() {
 //TODO Test on Android Chrome Portrait.... OVERALL OK: Thumbnails = OK, Full Screen =  photo captions dont wrap, causing minor display problems
 //TODO Test on Android Chrome Landscape.... OVERALL OK: Thumbnails = OK, Full Screen =  photo captions dont wrap, causing minor display problems
 
-//TODO Test on Safari Portrait..... 
-//TODO Test on Safari Landscape..... 
+//TODO Test on Safari Portrait..... OVERALL OK: Thumbnails = OK, Full Screen = OK ..... next and previous symbols dont show correctly
+//TODO Test on Safari Landscape..... OVERALL OK: Thumbnails = OK, Full Screen = OK ..... next and previous symbols dont show correctly
+//iphone Safari zooms in and out when rotated
 
 
 //TODO display something if no javascript
