--- a/testimonials.html
+++ b/testimonials.html
@@ -158,7 +158,7 @@ If you have any comments, please do contact me.</br>
 "'Andy B Goode' is a splendid performer who gives consistently good performance across a wide range of singing styles."</br>
 "'La Bamba' is especially good to hear. Perfect for weddings, christenings, birthdays etc.  Would highly recommend."
 
-<h3>E. Cutler (Fete)</h3>
+<h3>E. Cutler (Vintage Fayre)</h3>
 "Andy B Goode exceeded our expectations, so professional, an excellent act which was very good value for money."</br>
 "Having Andy B Goode at our vintage fair really set the scene and made the vintage context."</br>
 "It was lovely to see people of all ages stop, sit and listen, sing along or boogie on down."
@@ -166,24 +166,24 @@ If you have any comments, please do contact me.</br>
  <h3>C. Kirkwood (Birthday Party)</h3>
 "Your act was first class, very professional, Having heard you before we knew you would do a great job and we weren't disappointed. Great value for a special evening."</br>
 "If anyone is looking for a fun, professional singing act, 'Andy B Goode' is the guy for you."</br>
-"it doesn't matter the age group as the type of songs 'Andy B Goode' sings, he gets everybody singing and dancing along. Highly recommended."</br>
+"it doesn't matter the age group as the type of songs 'Andy B Goode' sings, he gets everybody singing and dancing along. Highly recommended."
 
-<h3>L. Ward (Fete)</h3>
+<h3>L. Ward (Village Fair)</h3>
 "5/5…. act met my expectations, Andy B Goode was fantastic, great range of songs and always entertaining"</br>
 "very entertaining - great show to sit and watch from start to finish, but also worked well as background music for people that were wandering in and out of the refreshment area, at our village fair"</br>
 "The song selection was great and Andrew performance is suitable for a wide variety of events"
  
 <h3>E. Jones (Birthday Party)</h3>
 "Totally! Fab evening completely brought to life with the excellent entertainment!"</br>
-"Everyone commented about the great atmosphere with your music.  A great party atmosphere and very pro! Loved it!"</br>
+"Everyone commented about the great atmosphere with your music.  A great party atmosphere and very pro! Loved it!"
 
-<h3>P. Reed</h3>
+<h3>P. Reed (Birthday Party)</h3>
 "The act was very good and met the expectations of the audience"</br>
 "Great evening - people singing along with some rock classics and a great party atmosphere"
 
 <h3>S. Britton (Fete)</h3>
 "it was great, lot of familiar tunes which people enjoyed and danced to!"</br>
-"Very upbeat and familiar set, great for a party, and for getting people dancing!"</br>
+"Very upbeat and familiar set, great for a party, and for getting people dancing!"
 
 </td>
 <td><img id="andybgoode" src="images/andybgoode.png" alt="Andy B Goode Headshot"></td>
