--- a/music.html
+++ b/music.html
@@ -103,7 +103,7 @@ You could play 'name that tune' while you listen.</br>
 <br/>
 
 <h3>'Teenager in Love'</h3>
-I also performed this song on on TCR FM at the 'Norton Juxta Twycross Summer Fete.</br>
+This was recorded at the Dosthill Summer Vintage Fayre. I also performed this song on on TCR FM at the 'Norton Juxta Twycross Summer Fete.</br>
 It's great to hear people joining in at the chorus.</br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/xfGqHgRePIY" frameborder="0" allowfullscreen></iframe>
 <br/>
@@ -130,11 +130,11 @@ Again a song from 'Back to the Future'. This time it's a slow love song.</br>
 <ul>
 <li>Phone: 07979 536591</li>
 <li>email: Andy@AndyBGoode.com</li>
-<li>Facebook: <a href="https://www.facebook.com/AndyBGoode">www.facebook.com/AndyBGoode</a></li>
-<li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">www.instagram.com/andybgoodevocalist</a></li>
-<li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode Channel</a></li>
-<li>Twitter: <a href="http://www.twitter.com/AndyBGoode">www.twitter.com/AndyBGoode</a></li>
-<li>website: v2.0.7</li>
+<li>Facebook: <a href="https://www.facebook.com/AndyBGoode">AndyBGoode</a></li>
+<li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
+<li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
+<li>Twitter: <a href="http://www.twitter.com/AndyBGoode">AndyBGoode</a></li>
+<li>website: v2.0.12</li>
 </ul>
 </div>
 </div>
