--- a/testimonials.html
+++ b/testimonials.html
@@ -133,7 +133,8 @@ Tony Bennett: Sleigh Ride<br/>
 Elvis: Blue Christmas, Lonely This Christmas<br/>
 Chuck Berry: Run, Run, Rudolph<br/>
 Bobby Helms: Jingle Bell Rock<br/>
-Bobby Day: Rockin' Robin
+Bobby Day: Rockin' Robin<br/>
+Shakin' Stevens: Merry Xmas Everyone
 </td></tr>
 <table>
 
