--- a/testimonials.html
+++ b/testimonials.html
@@ -152,6 +152,7 @@ Here are some of the things that people have said about "Andy B Goode" gigs.<br/
 If you have any comments, please do contact me.</br>
 
 <table>
+ 
 <tr>
 <td>
 <h3>J. Franklin (Fete)</h3>
@@ -159,17 +160,22 @@ If you have any comments, please do contact me.</br>
 "'Andy B Goode' is a splendid performer who gives consistently good performance across a wide range of singing styles."</br>
 "'La Bamba' is especially good to hear. Perfect for weddings, christenings, birthdays etc.  Would highly recommend."
 </td>
-<td><img id="andybgoode" src="images/andybgoode.png" alt="Andy B Goode Headshot"></td>
+<td><img id="andybgoode" src="images/andybgoode0012-thumb.jpg" alt="Dosthill Vintage Summer Fayre"></td>
 </tr>
+ 
 <tr>
 <td>
- 
 <h3>E. Cutler (Vintage Fayre)</h3>
 "Andy B Goode exceeded our expectations, so professional, an excellent act which was very good value for money."</br>
 "Having Andy B Goode at our vintage fair really set the scene and made the vintage context."</br>
 "It was lovely to see people of all ages stop, sit and listen, sing along or boogie on down."
-
- <h3>C. Kirkwood (Birthday Party)</h3>
+</td>
+<td><img id="andybgoode" src="images/andybgoode0011-thumb.jpg" alt="Dosthill Vintage Summer Fayre"></td>
+</tr>
+ 
+<tr>
+<td>
+<h3>C. Kirkwood (Birthday Party)</h3>
 "Your act was first class, very professional, Having heard you before we knew you would do a great job and we weren't disappointed. Great value for a special evening."</br>
 "If anyone is looking for a fun, professional singing act, 'Andy B Goode' is the guy for you."</br>
 "it doesn't matter the age group as the type of songs 'Andy B Goode' sings, he gets everybody singing and dancing along. Highly recommended."
